Closed Bug 1799578 Opened 3 years ago Closed 3 years ago

[CTW] Text Cursor Indicator misplaced on multiline textareas with padding

Categories

(Core :: Disability Access APIs, defect, P3)

All
Windows
defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: asa, Assigned: morgan)

References

Details

Attachments

(2 files)

In bug 1797222, we fixed a problem with the Text Cursor Indicator refusing to track text across wraps or line breaks -- or something like that :-)

Now it does track rows of text better, but in textareas with padding set, the indicator ends up below the current line (and perhaps a few pixels too far to the right.) I'll attach a screenshot that makes it clear what I'm describing.

Another note, and maybe it deserves a separate bug, but if I scroll the document, the Text Cursor Indicator stays in the same place rather than staying "attached" to the actual cursor.

Test case:
data:text/html,<textarea style="padding: 10px;">ab%0acd
I guess our y coord for continuations is off somehow in the presence of padding, but I don't have any clue why.

Blocks: a11y-ctw
Severity: -- → S3
Depends on: 1797222

(In reply to Asa Dotzler [:asa] from comment #0)

Another note, and maybe it deserves a separate bug, but if I scroll the document, the Text Cursor Indicator stays in the same place rather than staying "attached" to the actual cursor.

I think it'd be good to have a different bug for this. Also, does this one occur with CTW disabled too or only CTW enabled?

Flags: needinfo?(asa)
Summary: Text Cursor Indicator misplaced on multiline textareas with padding → [CTW] Text Cursor Indicator misplaced on multiline textareas with padding
Assignee: nobody → mreschenberg
Priority: -- → P3

(In reply to James Teh [:Jamie] from comment #2)

(In reply to Asa Dotzler [:asa] from comment #0)

Another note, and maybe it deserves a separate bug, but if I scroll the document, the Text Cursor Indicator stays in the same place rather than staying "attached" to the actual cursor.

I think it'd be good to have a different bug for this. Also, does this one occur with CTW disabled too or only CTW enabled?

I've got a mochitest for the padding issue, which passes with the cache off. So technically a regression. Not sure about the scrolling

Attachment #9302759 - Attachment description: Bug 1799578: Compute relative offsets for continuations to avoid double counting padding when computing CharBounds r?Jamie → Bug 1799578: Manually compute relative offsets for continuations to avoid double counting padding in CharBounds r?Jamie
Attachment #9302759 - Attachment description: Bug 1799578: Manually compute relative offsets for continuations to avoid double counting padding in CharBounds r?Jamie → Bug 1799578: Compute relative offsets for continuations to avoid double counting padding when computing CharBounds r?Jamie
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/617bbc5ca072 Compute relative offsets for continuations to avoid double counting padding when computing CharBounds r=Jamie
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Flags: needinfo?(asa)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: