Bug 1799578: Compute relative offsets for continuations to avoid double counting padding when computing CharBounds r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D161736